EEVEE: Scattering pass is also outputted as Transmittance Volume Renderpass #81254

Closed
opened 2020-09-28 16:28:37 +02:00 by Jeroen Bakker · 8 comments

System Information
Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.23.04

Blender Version
Broken: version: 2.83.*; 2.91.0 Alpha, branch: master, commit date: 2020-09-28 12:56, hash: c6b904e972
Worked: No official release.

Short description of error
When rendering a transmittance volume render pass the result is the same as the scattering pass.

Exact steps for others to reproduce the error

  1. Start Blender
  2. Add an volumetric object + material
  3. Enable the Volumetric render passes.
  4. Look at the differences.

eevee_cycles_volume_transmittance.blend

**System Information** Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.23.04 **Blender Version** Broken: version: 2.83.*; 2.91.0 Alpha, branch: master, commit date: 2020-09-28 12:56, hash: `c6b904e972` Worked: No official release. **Short description of error** When rendering a transmittance volume render pass the result is the same as the scattering pass. **Exact steps for others to reproduce the error** 1. Start Blender 2. Add an volumetric object + material 3. Enable the Volumetric render passes. 4. Look at the differences. [eevee_cycles_volume_transmittance.blend](https://archive.blender.org/developer/F8932047/eevee_cycles_volume_transmittance.blend)
Poster
Collaborator

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-09-28 16:29:04 +02:00
Poster
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @EAW

Added subscriber: @EAW

Oh, I just assumed this was just a current limitation that would be handled in D7010: EEVEE: Arbitrary Output Variables or I would have reported it earlier. My mistake.

Oh, I just assumed this was just a current limitation that would be handled in [D7010: EEVEE: Arbitrary Output Variables](https://archive.blender.org/developer/D7010) or I would have reported it earlier. My mistake.
Poster
Collaborator

@EAW: well it was implemented in 2.83.0 it is also in the demo video of 2.83. But we might have un-fixed it :-)

@EAW: well it was implemented in 2.83.0 it is also in the demo video of 2.83. But we might have un-fixed it :-)

This issue was referenced by 6b1042f45a

This issue was referenced by 6b1042f45a587280cdeed167d941478cb39e40c7

This issue was referenced by 7c373555fd

This issue was referenced by 7c373555fd5de16905f52f0b60d46434ea3cbac6
Poster
Collaborator

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81254
There is no content yet.