source/blender/draw/engines/eevee/shaders/volumetric_accum_frag.glsl
@@ -1,8 +1,8 @@
 
 /* This shader is used to add default values to the volume accum textures.
  * so it looks similar (transmittance = 1, scattering = 0) */
-layout(location = 0, index = 0) out vec4 FragColor0;
-layout(location = 0, index = 1) out vec4 FragColor1;
+layout(location = 0) out vec4 FragColor0;
+layout(location = 1) out vec4 FragColor1;
 
 void main()
 {
